# product-management-backend

./: .dockerignore  .env-example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  seed.sh
nginx/: Dockerfile  default.conf
product/: choices.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py
product_management/: settings.py  urls.py
seed/: 0001_categories.json  0002_users.json
user/: serializers.py  urls.py  views.py
