[tool.poetry]
name = "product-management-backend"
version = "0.0.0"
description = ""
authors = ["Edgar Valdez <edgarvaldez99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
